--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wegotyoscripts</title>
-  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <title>WeGotYoScripts</title>
+  <%= stylesheet_link_tag 	 'application', media: 'all'%>
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-app="Wegotyoscripts">
 
 <%= yield %>
 
