--- a/app/assets/templates/dashboard/layout.html.erb
+++ b/app/assets/templates/dashboard/layout.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
     <div class="col-sm-3 dashboard-navigation">
-        <h4>Dashboard Navigation</h4>
+        <h4>Dashboard</h4>
         <ul class="nav nav-pills nav-stacked">
             <li><a ui-sref="dashboard.one">One</a></li>
             <li><a ui-sref="dashboard.two">Two</a></li>
