--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Home!</h1>
+    <h1>Welcome</h1>
     <ul>
         <li ng-repeat="thing in things">{{thing}}</li>
     </ul>
