--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -2,11 +2,10 @@
   <div class="container">
 
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">My App!</a>
+      <a class="navbar-brand" href="/">Opternative</a>
     </div>
 
     <ul class="nav navbar-nav">
-      <li><a href="/">Home</a></li>
       <li><a href="/dashboard">Dashboard</a></li>
     </ul>
 
