--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Welcome</h1>
-    <ul>
+    <ul class="text-muted">
         <li ng-repeat="thing in things">{{thing}}</li>
     </ul>
 </div>
