--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -8,6 +8,8 @@
     <ul class="nav navbar-nav">
       <li><a href="/dashboard">Dashboard</a></li>
     </ul>
-
+    <ul class="nav navbar-nav pull-right">
+    	<li><a href="/login">Login</a></li>
+    </ul>
   </div>
 </nav>
