--- a/app/assets/templates/user/layout.html.erb
+++ b/app/assets/templates/user/layout.html.erb
@@ -1,17 +1,47 @@
 <div class="container">
     <div class="row">
     <div class="col-sm-3 dashboard-navigation">
-        <h4>Dashboard</h4>
+        <h4>Login to</h4>
         <ul class="nav nav-pills nav-stacked">
-            <li><a ui-sref="dashboard.one">One</a></li>
-            <li><a ui-sref="dashboard.two">Two</a></li>
-            <li><a ui-sref="dashboard.three">Three</a></li>
+            <li>Sign up for our services</li>
+            <li>Manage your prescription</li>
         </ul>
     </div>
     <div class="col-sm-9">
-        <div class="dashboard-view-container">
-            <div class="login-ui-view" ui-view></div>
+        <div class="container">
+    <div class="row">
+        <div class="span12">
+            <form class="form-horizontal" action='' method="POST">
+              <fieldset>
+                <div id="legend">
+                  <legend class="">Login</legend>
+                </div>
+                <div class="control-group">
+                  <!-- Username -->
+                  <label class="control-label"  for="username">Username</label>
+                  <div class="controls">
+                    <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
+                  </div>
+                </div>
+                <div class="control-group">
+                  <!-- Password-->
+                  <label class="control-label" for="password">Password</label>
+                  <div class="controls">
+                    <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
+                  </div>
+                </div>
+                <div class="control-group">
+                  <!-- Button -->
+                  <div class="controls">
+                    <button class="btn btn-success">Login</button>
+                  </div>
+                </div>
+              </fieldset>
+            </form>
         </div>
+    </div>
+</div>
+
     </div>
     </div>
 </div>
