--- a/app/assets/stylesheets/ng-app/_login.scss
+++ b/app/assets/stylesheets/ng-app/_login.scss
@@ -1,6 +1,6 @@
-.dashboard-view-container{
+.login-view-container{
     position: relative;
 }
-.dashboard-ui-view{
+.login-ui-view{
     @extend .main-view-container;
 }
