--- a/app/assets/templates/user/layout.html.erb
+++ b/app/assets/templates/user/layout.html.erb
@@ -33,7 +33,7 @@
                 <div class="control-group">
                   <!-- Button -->
                   <div class="controls">
-                    <button class="btn btn-success">Login</button>
+                    <a class="btn btn-success" type="button" href="/dashboard">Login</a>
                   </div>
                 </div>
               </fieldset>
