--- a/app/assets/templates/dashboard/layout.html.erb
+++ b/app/assets/templates/dashboard/layout.html.erb
@@ -3,9 +3,7 @@
     <div class="col-sm-3 dashboard-navigation">
         <h4>Dashboard</h4>
         <ul class="nav nav-pills nav-stacked">
-            <li><a ui-sref="dashboard.one">One</a></li>
-            <li><a ui-sref="dashboard.two">Two</a></li>
-            <li><a ui-sref="dashboard.three">Three</a></li>
+            <li><a ui-sref="dashboard.two">Manage Prescriptions</a></li>
         </ul>
     </div>
     <div class="col-sm-9">
