added select skeleton

--- a/app/assets/templates/dashboard/one.html.erb
+++ b/app/assets/templates/dashboard/one.html.erb
@@ -1,5 +1,28 @@
+<div class="container" ng-controller="ScriptCtrl">
+     <head>
+  </head>
 
+    <h3>{{title1}}</h3>
+    
+    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in items"></select>
 
-<h4>{{title}}</h4>
+    <h4>{{title2}}</h4>
+    
+    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in sph"></select>
 
-<select ng-controller="ScriptCtrl" ng-model="selectedValue" ng-options="value for value in items"></select>
+    <h4>{{title3}}</h4>
+    
+    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in syl"></select>
+
+    <h4>{{title4}}</h4>
+    
+    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in axs"></select>
+
+    <h4>{{title5}}</h4>
+    
+    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in bc"></select>
+
+    <h4>{{title6}}</h4>
+    
+    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in diam"></select>
+</div>
