--- a/app/assets/templates/dashboard/one.html.erb
+++ b/app/assets/templates/dashboard/one.html.erb
@@ -3,8 +3,12 @@
   </head>
 
     <h3>{{title1}}</h3>
-    
-    <select class="selectpicker" data-style="btn-info" ng-model="selectedValue" ng-options="value for value in items"></select>
+    <form>
+  <input type="radio" ng-model="selectedValue" value="Glasses"> Glasses<br/>
+  <input type="radio" ng-model="selectedValue" value="Contacts"> Contacts<br/>
+  <input type="radio" ng-model="selectedValue" value="Both"> Both<br/>
+  <tt>selectedValue = {{selectedValue | json}}</tt><br/>
+ </form>
 
     <h4>{{title2}}</h4>
     
