--- a/app/assets/templates/dashboard/three.html.erb
+++ b/app/assets/templates/dashboard/three.html.erb
@@ -1,1 +1,23 @@
-<h2>Third Dashboard View</h2>
+<div class="container" ng-controller="contactsCtrl">
+    <form>
+        <h4>{{title2}}</h4>
+        
+        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in sph"></select>
+    
+        <h4>{{title3}}</h4>
+        
+        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in syl"></select>
+    
+        <h4>{{title4}}</h4>
+        
+        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in axs"></select>
+    
+        <h4>{{title5}}</h4>
+        
+        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in bc"></select>
+    
+        <h4>{{title6}}</h4>
+        
+        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in diam"></select>
+    </form>
+</div>
