--- a/app/assets/templates/dashboard/two.html.erb
+++ b/app/assets/templates/dashboard/two.html.erb
@@ -1,15 +1,20 @@
-<div class="container" ng-controller="glassesCtrl">
+
+<div class="rx-form" ng-controller="glassesCtrl">
 	<form>
-		<h4>{{title2}}</h4>
+		<div class="form-group" type="form-inline">
+			<h4>{{title2}}</h4>
 	    
-	    <select class="selectpicker" data-style="btn-info" ng-model="	selectedValue" ng-options="value for value in sph"></select>
+	    		<select class="selectpicker" data-style="btn-info" ng-model="formData.text" ng-options="value for value in sph"></select>
 	
-	    <h4>{{title3}}</h4>
+	    	<h4>{{title3}}</h4>
 	    
-	    <select class="selectpicker" data-style="btn-info" ng-model="	selectedValue" ng-options="value for value in syl"></select>
+	    		<select class="selectpicker" data-style="btn-info" ng-model="formData.text" ng-options="value for value in syl"></select>
 	
-	    <h4>{{title4}}</h4>
+	    	<h4>{{title4}}</h4>
 	    
-	    <select class="selectpicker" data-style="btn-info" ng-model="	selectedValue" ng-options="value for value in axs"></select>
+	    		<select class="selectpicker" data-style="btn-info" ng-model="formData.text" ng-options="value for value in axs"></select>
+	    		<br></br>
+	    		<button type="submit" class="btn btn-info btn-lg" ng-click="createRx()">Add</button>
+		</div>
 	</form>
 </div>
