removed erb forms

--- a/app/assets/templates/user/layout.html.erb
+++ b/app/assets/templates/user/layout.html.erb
@@ -11,26 +11,31 @@
         <div class="container">
     <div class="row">
         <div class="span12">
-            <form class="form-horizontal">
+            <form class="form-horizontal" action='' method="POST">
               <fieldset>
                 <div id="legend">
                   <legend class="">Login</legend>
                 </div>
-
+                <div class="control-group">
                   <!-- Username -->
-        <div class="controls">
-          <%= form_for @user do |f| %>
-          <p><%= f.text_field :username, placeholder: "Username" %></p>
-          <p><%= f.password_field :password, placeholder: "Password" %></p>
-          <%= f.submit "Create" %>
-          <% end %>
+                  <label class="control-label"  for="username">Username</label>
+                  <div class="controls">
+                    <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
+                  </div>
+                </div>
+                <div class="control-group">
                   <!-- Password-->
                   <label class="control-label" for="password">Password</label>
                   <div class="controls">
-                  
+                    <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
                   </div>
+                </div>
+                <div class="control-group">
                   <!-- Button -->
-
+                  <div class="controls">
+                    <a class="btn btn-success" type="button" href="/dashboard">Login</a>
+                  </div>
+                </div>
               </fieldset>
             </form>
         </div>
