--- a/app/assets/templates/dashboard/three.html.erb
+++ b/app/assets/templates/dashboard/three.html.erb
@@ -20,4 +20,6 @@
         
         <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in diam"></select>
     </form>
+    <br>
+    <a class="btn btn-success" href="/dashboard" ng-click="addScript()">Add</a>
 </div>
