--- a/app/assets/templates/dashboard/two.html.erb
+++ b/app/assets/templates/dashboard/two.html.erb
@@ -13,8 +13,7 @@
 	    	<h4>{{title4}}</h4>
 	    
 	    		<select class="selectpicker" data-style="btn-info" ng-model="formData.text" ng-options="value for value in axs"></select>
-	    		<br></br>
-	    		<button type="submit" class="btn btn-info btn-lg" ng-click="createRx()">Add</button>
 		</div>
 	</form>
+	    		<a class="btn btn-success" href="/dashboard" ng-click="addScript()">Add</a>
 </div>
