--- a/app/assets/templates/dashboard/four.html.erb
+++ b/app/assets/templates/dashboard/four.html.erb
@@ -2,23 +2,23 @@
     <form>
         <h4>{{title2}}</h4>
         
-        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in sph"></select>
+        <select class="selectpicker" data-style="btn-info" ng-model="prescription.sph" ng-options="value for value in sph"></select>
     
         <h4>{{title3}}</h4>
         
-        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in syl"></select>
+        <select class="selectpicker" data-style="btn-info" ng-model="prescription.syl" ng-options="value for value in syl"></select>
     
         <h4>{{title4}}</h4>
         
-        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in axs"></select>
+        <select class="selectpicker" data-style="btn-info" ng-model="prescription.axs" ng-options="value for value in axs"></select>
     
         <h4>{{title5}}</h4>
         
-        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in bc"></select>
+        <select class="selectpicker" data-style="btn-info" ng-model="prescription.bc" ng-options="value for value in bc"></select>
     
         <h4>{{title6}}</h4>
         
-        <select class="selectpicker" data-style="btn-info" ng-model="   selectedValue" ng-options="value for value in diam"></select>
+        <select class="selectpicker" data-style="btn-info" ng-model="prescription.diam" ng-options="value for value in diam"></select>
     </form>
     <br>
     <a class="btn btn-success" href="/dashboard" ng-click="addScript()">Add</a>
