--- a/app/assets/templates/dashboard/one.html.erb
+++ b/app/assets/templates/dashboard/one.html.erb
@@ -2,23 +2,23 @@
     <head>
     </head>
 
-    <h3>{{title1}}</h3>
-            <div ng-repeat="script in allScripts">
+    <h3>Select Prescription Type</h3>
+            <div ng-repeat="script in scripts">
             <input ng-model="script.model" type="text" />
             <a class="btn btn-danger" href="javascript://" ng-click="removeScript(script)">Delete</a>
         </div>
 <form>
     <div class="btn-group" data-toggle="buttons">
          <a class="btn btn-primary" href="/dashboard/two"> 
-            <input type="checkbox" ng-model="selectedValue">Glasses
+            <input type="checkbox" ng-model="prescrption.prescription_type">Glasses
         </a>
         <a class="btn btn-primary" href="/dashboard/three">
-            <input type="checkbox" ng-model="selectedValue"> Contacts
+            <input type="checkbox" ng-model="prescrption.prescription_type"> Contacts
         </a>
         <a class="btn btn-primary" href="/dashboard/four">
-            <input type="checkbox" ng-model="selectedValue"> Both
+            <input type="checkbox" ng-model="prescrption.prescription_type"> Both
         </a>
     </div>
-    <br><tt>selectedValue = {{selectedValue | json}}</tt><br/>
+    <!-- <br><tt>selectedValue = {{selectedValue | json}}</tt><br/> -->
 </form>
 </div>
