--- a/app/assets/templates/home.html.erb
+++ b/app/assets/templates/home.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-    <h1>Welcome</h1>
+
+<div class="jumbotron">
+ <h1>Welcome</h1>
     <ul class="text-muted">
         <li ng-repeat="thing in things">{{thing}}</li>
     </ul>
