--- a/app/assets/templates/user/layout.html.erb
+++ b/app/assets/templates/user/layout.html.erb
@@ -3,8 +3,7 @@
     <div class="col-sm-3 dashboard-navigation">
         <h4>Login to</h4>
         <ul class="nav nav-pills nav-stacked">
-            <li>Sign up for our services</li>
-            <li>Manage your prescription</li>
+            <li class="text-muted">Manage your prescription</li>
         </ul>
     </div>
     <div class="col-sm-9">
@@ -30,6 +29,7 @@
                     <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
                   </div>
                 </div>
+                <br>
                 <div class="control-group">
                   <!-- Button -->
                   <div class="controls">
